--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "build": "npm run clean && npm run imagemin && npm run copyfonts && npm run usemin",
     "scss": "node-sass -o css/ css/",
     "start": "npm run watch:all",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gh-pages -d dist",
+    // "test": "echo \"Error: no test specified\" && exit 1",
     "watch:scss": "onchange \"css/*.scss\" -- npm run scss",
     "watch:all": "parallelshell \"npm run watch:scss\" \"npm run lite\""
   },
@@ -28,11 +29,22 @@
     "rimraf": "^2.6.2",
     "usemin-cli": "^0.5.1"
   },
+  "homepage":"https://tellylowe.github.io/NuCampSite/",
   "dependencies": {
     "bootstrap": "^4.0.0",
     "bootstrap-social": "^5.1.1",
     "font-awesome": "^4.7.0",
+    "gh-pages": "^3.0.0",
     "jquery": "^3.5.0",
     "popper.js": "^1.12.9"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TellyLowe/Projects.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/TellyLowe/Projects/issues"
+  },
+  "homepage": "https://github.com/TellyLowe/Projects#readme"
 }
